--- a/src/app/vets/components/add-doctor/add-doctor.component.html
+++ b/src/app/vets/components/add-doctor/add-doctor.component.html
@@ -58,6 +58,7 @@
                     formControlName="userName"
                     [(ngModel)]="adddetails.userName"
                   />
+                  <!-- this is the new line added  -->
                   <span
                     *ngIf="
                       addForm.get('userName')?.invalid &&
